# brain_occlusion_detection

./: .gitignore  CLAUDE.md  TOOLS_USAGE.md  VIT_GUIDE.md  main.py  pyproject.toml  train_vit.py
.claude/: settings.local.json
configs/: data_config.yaml  mae_vit_base_stage1.yaml  mae_vit_base_stage2.yaml  mae_vit_base_stage3.yaml  model_config.yaml  resnet50_augmented.yaml  resnet50_image_split.yaml  resnet50_image_split_stage2.yaml  resnet50_pretrained.yaml  resnet50_quick_test.yaml  train_config.yaml  vit_b16_augmented.yaml  vit_b16_image_split.yaml  vit_b16_pretrained.yaml  vit_b16_quick_test.yaml  vit_config.yaml
docs/: DATA_AUGMENTATION_PLAN.md  DATA_AUGMENTATION_QUICKSTART.md  IMMEDIATE_ACTION_PLAN.md  LITERATURE_REVIEW_SUMMARY.md  PHASE1_ANALYSIS_AND_NEXT_STEPS.md  RESEARCH_PLAN_COMPREHENSIVE.md  RESEARCH_PLAN_EXECUTION_SUMMARY.md
experiments/analysis/: per_image_comparison_summary.csv  resnet50_metrics_by_occlusion.csv  resnet50_test_predictions.csv  vit_b16_metrics_by_occlusion.csv  vit_b16_test_predictions.csv
reports/: advisor_report_2026-01.md  research_analysis_20260109_223853.md
reports/analysis_outputs/: analysis_summary.txt
scripts/: analyze_errors.py  compare_performance.py  create_image_splits.py  evaluate_by_occlusion.py  extract_attention.py  load_human_data.py  quick_test.py  train_model.py  verify_experiment.py
scripts/analysis/: analyze_errors.py  analyze_human_behavioral_data.py  compare_human_vs_ai_final.py  comprehensive_analysis.py  create_presentation.py  generate_obsidian_report.py  (+1 more)
src/: __init__.py
tests/: __init__.py
(+25 files in other folders)
